tests/e2e/semantics/assignment_service_output_none.error
Error: syntax error in story at line 1, column 5

1|    a = log info msg:"foobar"
          ^^^^^^^^^^^^^^^^^^^^^

E0116: Assignments with the type `None` are not allowed
