tests/e2e/semantics/assignment_service_output_none.story
a = log info msg:"foobar"
